--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jeu de Devinette</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.7/dist/tailwind.min.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.7/dist/tailwind.min.css">
+    <script src="/public/socket.io/socket.io.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.1.2/socket.io.js"></script>
-
     <style>
       #guess-input {
         display: none;
@@ -75,7 +74,7 @@
       socket.on("message", (message) => {
         const li = document.createElement("li");
         li.textContent = message;
-        li.className = "text-blue-700"; // Ajouter la classe de style pour la couleur verte
+        li.className = "text-blue-700";
         messages.appendChild(li);
 
         // Supprimer le message après 5 secondes
